--- a/.github/workflows/oct19_test.yml
+++ b/.github/workflows/oct19_test.yml
@@ -9,10 +9,16 @@ env:
   projectID: 288343
   continuePipeline: "false"
   showTailLog: "false"
-on: push
+
+on:
+  push:
+    branches:
+      - dummy
+
 jobs:
   github-action: null
   runs-on: ubuntu-latest
+  
   steps:
     - name: Checkout
       uses: actions/checkout@v2.3.4
