--- a/.github/workflows/oct19_test.yml
+++ b/.github/workflows/oct19_test.yml
@@ -1,38 +1,32 @@
----
 name: github-action
 env:
-  apiKey:  ${{ secrets.BLAZEMETER_API_KEY }}
+  apiKey: ${{ secrets.BLAZEMETER_API_KEY }}
   apiSecret: ${{ secrets.BLAZEMETER_API_SECRET }}
   createTest: "true"
-  inputStartFile: "./load-test.jmx"
+  inputStartFile: ./load-test.jmx
   testName: API_Load_Test
   projectID: 288343
   continuePipeline: "false"
   showTailLog: "false"
-
 on:
   push:
     branches:
       - dummy
-
 jobs:
   github-action: null
   runs-on: ubuntu-latest
-  
-  steps:
-    - name: Checkout
-      uses: actions/checkout@v2.3.4
-    - name: Run Blazemeter test
-      uses: BlazeRunner-BZR/Github-Action@v8.1
-  id: run-test
-  with: null
-  apiKey:  ${{ secrets.BLAZEMETER_API_KEY }}
-  apiSecret: ${{ secrets.BLAZEMETER_API_SECRET }}
-  createTest: ${{env.createTest}}
-  inputStartFile: ${{env.inputStartFile}}
-  testName: ${{env.testName}}
-  projectID: ${{env.projectID}}
-  continuePipeline: ${{env.continuePipeline}}
-  showTailLog: ${{env.showTailLog}}
-
-
+steps:
+  - name: Checkout
+    uses: actions/checkout@v2.3.4
+  - name: Run Blazemeter test
+    uses: BlazeRunner-BZR/Github-Action@v8.1
+id: run-test
+with: null
+apiKey: ${{ secrets.BLAZEMETER_API_KEY }}
+apiSecret: ${{ secrets.BLAZEMETER_API_SECRET }}
+createTest: ${{env.createTest}}
+inputStartFile: ${{env.inputStartFile}}
+testName: ${{env.testName}}
+projectID: ${{env.projectID}}
+continuePipeline: ${{env.continuePipeline}}
+showTailLog: ${{env.showTailLog}}
