--- a/.github/workflows/oct19_test.yml
+++ b/.github/workflows/oct19_test.yml
@@ -1,29 +1,37 @@
 name: github-action
+
 env:
-  apiKey: '${{ secrets.BLAZEMETER_API_KEY }}'
-  apiSecret: '${{ secrets.BLAZEMETER_API_SECRET }}'
-  createTest: 'true'
-  inputStartFile: ./load-test.jmx
+  apiKey: ${{ secrets.BLAZEMETER_API_KEY }}
+  apiSecret: ${{ secrets.BLAZEMETER_API_SECRET }}
+  createTest: "true"
+  inputStartFile: "./load-test.jmx"
   testName: API_Load_Test
   projectID: 288343
-  continuePipeline: 'false'
-  showTailLog: 'false'
-'on': push
+  continuePipeline: "false"
+  showTailLog: "false"
+
+on:
+  push:
+    branches:
+      - test
+
 jobs:
-  github-action: null
-  runs-on: ubuntu-latest
-  steps:
-    - name: Checkout
+  run-blazemeter-test:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout repository
       uses: actions/checkout@v2.3.4
-    - name: Run Blazemeter test
+
+    - name: Run BlazeMeter test
       uses: BlazeRunner-BZR/Github-Action@v8.1
-  id: run-test
-  with: null
-  apiKey: '${{ secrets.BLAZEMETER_API_KEY }}'
-  apiSecret: '${{ secrets.BLAZEMETER_API_SECRET }}'
-  createTest: '${{env.createTest}}'
-  inputStartFile: '${{env.inputStartFile}}'
-  testName: '${{env.testName}}'
-  projectID: '${{env.projectID}}'
-  continuePipeline: '${{env.continuePipeline}}'
-  showTailLog: '${{env.showTailLog}}'
+      id: run-test
+      with:
+        apiKey: ${{ secrets.BLAZEMETER_API_KEY }}
+        apiSecret: ${{ secrets.BLAZEMETER_API_SECRET }}
+        createTest: ${{ env.createTest }}
+        inputStartFile: ${{ env.inputStartFile }}
+        testName: ${{ env.testName }}
+        projectID: ${{ env.projectID }}
+        continuePipeline: ${{ env.continuePipeline }}
+        showTailLog: ${{ env.showTailLog }}
